deployments/k3s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-horizon
  namespace: default
spec:
  replicas: 1  # для начала
  selector:
    matchLabels:
      app: event-horizon
  template:
    metadata:
      labels:
        app: event-horizon
    spec:
      containers:
      # Auth
      - name: auth
        image: eastwesser/auth:latest
        ports:
        - containerPort: 50051
      - name: billing
        image: eastwesser/billing:latest
        ports:
        - containerPort: 50053
      - name: game
        image: eastwesser/game:latest
        ports:
        - containerPort: 50052
      - name: leaderboard
        image: eastwesser/leaderboard:latest
        ports:
        - containerPort: 50054
      - name: profile
        image: eastwesser/profile:latest
        ports:
        - containerPort: 50060
      - name: shop
        image: eastwesser/shop:latest
        ports:
        - containerPort: 50055
      - name: inventory
        image: eastwesser/inventory:latest
        ports:
        - containerPort: 50059
      - name: gateway
        image: eastwesser/gateway:latest
        ports:
        - containerPort: 8080
