deployments/k3s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: event-horizon
  namespace: default
spec:
  selector:
    app: event-horizon
  ports:
  - name: http
    port: 8079
    targetPort: 8080
  - name: auth
    port: 50051
    targetPort: 50051
  - name: billing
    port: 50053
    targetPort: 50053
  - name: game
    port: 50052
    targetPort: 50052
  - name: leaderboard
    port: 50054
    targetPort: 50054
  - name: profile
    port: 50060
    targetPort: 50060
  - name: shop
    port: 50055
    targetPort: 50055
  - name: inventory
    port: 50059
    targetPort: 50059
  type: ClusterIP
