deployments/k3s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-horizon
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: event-horizon.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: event-horizon
            port:
              number: 8079
